[package]
name = "yaxpeax-ia64"
version = "0.1.1"
authors = ["iximeow <me@iximeow.net>"]
edition = "2018"
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-ia64/"
description = "ia64 decoder for the yaxpeax project"
readme = "README.md"

[dependencies]
yaxpeax-arch = { version = "0.0.4", default-features = false, features = [] }
bitvec = "0.19"
